--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section class="about" id="about_me">
         <div class="container">
             <div class="profile-img">
-                <img src="Profile-photo.png" alt="">
+                <img src="Profile-Photo.jpg" alt="">
             </div>
             <div class="about-details">
                 <div class="about-heading">
@@ -123,7 +123,7 @@
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-img has-margin-right">
-                    <img src="Portfolio-photo.png" alt="">
+                    <img src="Web-Development.jpg" alt="">
                 </div>
                 <div class="portfolio-description has-margin-right">
                     <h6>Web Development</h6>
@@ -146,12 +146,12 @@
                     <a href="#" class="cta">View Details</a>
                 </div>
                 <div class="portfolio-img has-margin-right">
-                    <img src="Portfolio-photo.png" alt="">
+                    <img class="design" src="Web-Design.jpg" alt="">
                 </div>
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-img  has-margin-right">
-                    <img src="Portfolio-photo.png" alt="">
+                    <img src="Product-Sketch.jpg" alt="">
                 </div>
                 <div class="portfolio-description has-margin-right">
                     <h6>Web Design</h6>
