--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Aryan Sharma</title>
+    <!--Fonts Link-->
+    <link href="https://fonts.googleapis.com/css2?family=Medula+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
@@ -46,7 +48,7 @@
     <section class="about" id="about_me">
         <div class="container">
             <div class="profile-img">
-                <img src="Profile-Photo.jpg" alt="">
+                <img src="Profile-Image.JPG" alt="">
             </div>
             <div class="about-details">
                 <div class="about-heading">
@@ -123,7 +125,7 @@
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-img has-margin-right">
-                    <img src="Web-Development.jpg" alt="">
+                    <img src="Portfolio-photo.png" alt="">
                 </div>
                 <div class="portfolio-description has-margin-right">
                     <h6>Web Development</h6>
@@ -146,12 +148,12 @@
                     <a href="#" class="cta">View Details</a>
                 </div>
                 <div class="portfolio-img has-margin-right">
-                    <img class="design" src="Web-Design.jpg" alt="">
+                    <img src="Portfolio-photo.png" alt="">
                 </div>
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-img  has-margin-right">
-                    <img src="Product-Sketch.jpg" alt="">
+                    <img src="Portfolio-photo.png" alt="">
                 </div>
                 <div class="portfolio-description has-margin-right">
                     <h6>Web Design</h6>
