--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
                 <h6>View some of my recent Work</h6>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right">
+                <div class="portfolio-img">
                     <img src="Portfolio-photo.png" alt="">
                 </div>
-                <div class="portfolio-description has-margin-right">
+                <div class="portfolio-description">
                     <h6>Web Development</h6>
                     <h1>Blog Development</h1>
                     <p>
@@ -138,7 +138,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-description has-margin-right">
+                <div class="portfolio-description desc-2">
                     <h6>Web Design</h6>
                     <h1>Product Layout</h1>
                     <p>
@@ -147,15 +147,15 @@
                     </p>
                     <a href="#" class="cta">View Details</a>
                 </div>
-                <div class="portfolio-img has-margin-right">
+                <div class="portfolio-img img-2">
                     <img src="Portfolio-photo.png" alt="">
                 </div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-img  has-margin-right">
+                <div class="portfolio-img">
                     <img src="Portfolio-photo.png" alt="">
                 </div>
-                <div class="portfolio-description has-margin-right">
+                <div class="portfolio-description">
                     <h6>Web Design</h6>
                     <h1>Product Sketch</h1>
                     <p>
